# pdebc

./: README.md
blender/: curve0.blend1  curve0.dae  curve0.videoscape
doc/: Doxyfile  intro.dox
notebook/: pdebc.ipynb
runscripts/: run.sh  test.sh
samples/bezier_fitting/: BezierCurve.cpp  BezierCurve.hpp  CMakeLists.txt  FindLibPDEBC.cmake  bezier_fitting.cpp  pypde.cpp  pypde.hpp  pypde.i
samples/bezier_fitting/notebook/: pypde_t01.ipynb
samples/point_fitting/: CMakeLists.txt  FindLibPDEBC.cmake  point_fitting.cpp
sourcetree/: BCDESolver.cpp  BCDESolver.h  BCDESolverST.cpp  BCDESolverST.h  BaseDE.hpp  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Globals.cpp  Globals.h  SVGParser.cpp  SVGParser.h  SequentialDE.hpp  ThreadsDE.hpp  ThreadsDESolver.hpp  Vec2.h  _emptysrc.cpp  main.cpp
svgs/: curve0.blend
