cmake_minimum_required(VERSION 2.8)

project(pdebc_bezier_fitting)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")

FIND_PACKAGE(LibPDEBC REQUIRED)
INCLUDE_DIRECTORIES(${LIBPDEBC_INCLUDE_DIR})


FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
#INCLUDE_DIRECTORIES(/usr/include/python3.2)
#SET(PYTHON_LIBRARIES /usr/lib/)
message(STATUS "Python Lib: ${PYTHON_LIBRARIES}")
message(STATUS "Python Include: ${PYTHON_INCLUDE_PATH}")

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

set(SRCS
	bezier_fitting.cpp
	BezierCurve.cpp
)

SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -pipe -fomit-frame-pointer")

# SWIG CONFIG
SET_SOURCE_FILES_PROPERTIES(pypde.i PROPERTIES COMPILE_FLAGS "-std=c++11")
SET_SOURCE_FILES_PROPERTIES(pypde.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(pypde.i PROPERTIES SWIG_FLAGS "-includeall")
SET_SOURCE_FILES_PROPERTIES(pypde.i PROPERTIES SWIG_FLAGS "-py3")
SET_SOURCE_FILES_PROPERTIES(pypde.i PROPERTIES SWIG_FLAGS "-c++")
SWIG_ADD_MODULE(pypde python pypde.i pypde.cpp ${SRCS})
SWIG_LINK_LIBRARIES(pypde ${PYTHON_LIBRARIES} ${LIBPDEBC_LIBRARY})

add_executable(bezier_fitting ${SRCS})
target_link_libraries(bezier_fitting ${LIBPDEBC_LIBRARY})

